# experiments

./: .gitignore
bacon/: bacon.sh  tiny.list
bacon/src/io/pivotal/bacon/: Actor.java  ActorDatabase.java  BaconNumber.java  BaconNumberCalculator.java  BaconPath.java  BaconPathQueue.java  DoubleMapQueue.java  DoubleMapQueueTest.java  FileLoader.java  Main.java  MapQueue.java  MapQueueTest.java  Movie.java  MovieDatabase.java  NameNormalizer.java  SingleMapQueue.java  SingleMapQueueTest.java  TitleNormalizer.java
bacon/src/io/pivotal/bacon/heap/: ActorDatabase.java  BaconPathQueue.java  MovieDatabase.java  ParallelBaconNumberCalculator.java  PooledBaconNumberCalculator.java  QueuedBaconNumberCalculator.java  SerialBaconNumberCalculator.java
bacon/src/io/pivotal/bacon/http/: BaconHandler.java  MinimalHandler.java  Server.java
bacon/src/pivotal/io/bacon/: Actor.java  ActorDatabase.java  BaconNumber.java  BaconNumberCalculator.java  BaconPath.java  FileLoader.java  Main.java  Movie.java  MovieDatabase.java  NameNormalizer.java  TitleNormalizer.java
bacon/src/pivotal/io/bacon/heap/: ActorDatabase.java  MovieDatabase.java  ParallelBaconNumberCalculator.java  SerialBaconNumberCalculator.java
bacon/src/pivotal/io/bacon/http/: BaconHandler.java  MinimalHandler.java  Server.java
fudge_prob/: fudge_prob.py
invoker/src/: ArgumentInvoker.java  Main.java  MethodInvoker.java
protobuf_prototype/: CMakeLists.txt  message.proto  prototype.proto
protobuf_prototype/cpp/: Arguments.cpp  Arguments.hpp  CMakeLists.txt  Client.cpp  Client.hpp  Commands.cpp  Delay.cpp  Delay.hpp  Shell.cpp
protobuf_prototype/cpp/protobuf_prototype_cplusplus.xcodeproj/: project.pbxproj
protobuf_prototype/cpp/src/: Arguments.cpp  Client.cpp  Client.hpp  Commands.cpp  Commands.hpp  Delay.cpp  Main.cpp  Shell.cpp  Shell.hpp  fdbuf.cpp  fdbuf.hpp
protobuf_prototype/csharp/: CMakeLists.txt  protobuf_prototype_csharp.csproj  protobuf_prototype_csharp.sln  protobuf_prototype_csharp.userprefs
protobuf_prototype/csharp/Properties/: AssemblyInfo.cs
protobuf_prototype/csharp/src/: Client.cs  Delay.cs  Program.cs  Shell.cs
protobuf_prototype/java/: CMakeLists.txt  Region.java  Server.java
protobuf_prototype/java/src/io/pivotal/: Main.java  Region.java  Server.java  Shell.java
